<resources>
    <string name="app_name">Construction Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Calculator">Calculator</string>
    <string name="Unit_Converter">Unit Converter</string>
    <string name="Tip_Calculator">Tip Calculator</string>
    <string name="Loan_Calculator">Loan Calculator</string>

    <string name="Dont_show_this_again">Don\'t show this again</string>

    <string name="repay_method">Repayment Method</string>
    <string name="loan_principal">Loan Principal</string>
    <string name="loan_period">Loan Period</string>
    <string name="Loan_Interest_Rate">Loan Interest Rate</string>
    <string name="Interest_Only_Period">Interest Only Period</string>
    <string name="result">Result</string>
    <string name="Monthly_avg_payment">Monthly avg. payment</string>
    <string name="Total_payments">Total payments</string>
    <string name="Monthly_avg_interest">Monthly avg. interest</string>
    <string name="Total_interest">Total interest</string>
    <string name="Repayment_Amortization">Repayment Amortization</string>
    <string name="NO">NO.</string>
    <string name="Payment">Payment</string>
    <string name="Principal">Principal</string>
    <string name="Interest">Interest</string>
    <string name="Balance">Balance</string>

    <string name="Total_Bill">Total Bill</string>
    <string name="Tip_">Tip %</string>
    <string name="Tax_Amount">Tax Amount</string>
    <string name="Number_of_People">Number of People</string>
    <string name="Tip_Basis">Tip Basis</string>
    <string name="Tip_Amount">Tip Amount</string>
    <string name="Total_Pay">Total Pay</string>
    <string name="Bill_Per_Person">Bill Per Person</string>
    <string name="Tip_Per_Person">Tip Per Person</string>
    <string name="Total_Per_Person">Total Per Person</string>

    <string name="Meter">Meter</string>
    <string name="Hectometer">Hectometer</string>
    <string name="Kilometer">Kilometer</string>
    <string name="Inch">Inch</string>
    <string name="Foot">Foot</string>
    <string name="Mile">Mile</string>
    <string name="Nautical_Mile">Nautical Mile</string>
    <string name="Yard">Yard</string>
    <string name="Decimeter">Decimeter</string>
    <string name="Centimeter">Centimeter</string>
    <string name="Millimeter">Millimeter</string>

    <string name="Kilogram">Kilogram</string>
    <string name="Ton">Ton</string>
    <string name="Ton_UK">Ton [UK]</string>
    <string name="ton_us">Ton [US]</string>
    <string name="stone_uk">Stone [UK]</string>
    <string name="Ounce">Ounce</string>
    <string name="Pound">Pound</string>
    <string name="Grain">Grain</string>
    <string name="Gram">Gram</string>
    <string name="Milligram">Milligram</string>

    <string-array name="distances_array">
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Decimeter</item>
        <item>Meter</item>
        <item>Hectometer</item>
        <item>Kilometer</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Nautical Mile</item>
    </string-array>

    <string-array name="weights_array">
        <item>Milligram</item>
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Ton</item>
        <item>Ton [UK]</item>
        <item>Ton [US]</item>
        <item>Stone [UK]</item>
        <item>Grain</item>
        <item>Ounce</item>
        <item>Pound</item>
    </string-array>

    <string-array name="repay_method">
        <item>Level payment</item>
        <item>Fixed principal payment</item>
        <item>Balloon payment</item>
    </string-array>
    <string-array name="month_year">
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string-array name="languages">
        <item>Default</item>
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="languages_values">
        <item>default</item>
        <item>en</item>
        <item>fr</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
