<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/Calculator" />
        <item
            android:id="@+id/nav_unit_converter"
            android:icon="@drawable/ic_scale"
            android:title="@string/Unit_Converter" />
        <item
            android:id="@+id/nav_tip_calculator"
            android:icon="@drawable/ic_receipt"
            android:title="@string/Tip_Calculator" />
        <item
            android:id="@+id/nav_loan_calculator"
            android:icon="@drawable/ic_money_bag"
            android:title="@string/Loan_Calculator" />
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
