<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="abanoubmagdi.home.thecompletecalculator.WeightConverter">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="abanoubmagdi.home.thecompletecalculator.WeightConverter">

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:hint="1"
            android:inputType="numberDecimal"
            app:layout_constraintHeight_percent=".12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".5" />

        <Spinner
            android:id="@+id/weightSpinner"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:entries="@array/weights_array"
            app:layout_constraintHeight_percent=".12"
            app:layout_constraintStart_toEndOf="@+id/weightEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/gram"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/milligram"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/kilogram"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gram"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Kilogram"
            app:layout_constraintStart_toEndOf="@+id/kilogram"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Ton"
            app:layout_constraintStart_toEndOf="@+id/ton"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Ton_UK"
            app:layout_constraintStart_toEndOf="@+id/ton_uk"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/ton_us"
            app:layout_constraintStart_toEndOf="@+id/ton_us"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/stone_uk"
            app:layout_constraintStart_toEndOf="@+id/stone_uk"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/ton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kilogram"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/ton_uk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ton"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Ounce"
            app:layout_constraintStart_toEndOf="@+id/ounce"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Pound"
            app:layout_constraintStart_toEndOf="@+id/pound"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Grain"
            app:layout_constraintStart_toEndOf="@+id/grain"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/ton_us"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ton_uk"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/stone_uk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ton_us"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/grain"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stone_uk"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/ounce"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grain"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/pound"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ounce"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/milligram"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightEditText"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Gram"
            app:layout_constraintStart_toEndOf="@+id/gram"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            app:layout_constraintWidth_percent=".5" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|start"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:text="@string/Milligram"
            app:layout_constraintStart_toEndOf="@+id/milligram"
            app:layout_constraintTop_toBottomOf="@+id/weightSpinner"
            app:layout_constraintWidth_percent=".5" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>